testsuite/tests/typecheck/should_fail/VisFlag4.stderr

VisFlag4.hs:8:1: error: [GHC-83865]
    • Expected kind ‘forall k -> k -> k’,
        but ‘hk’ has kind ‘forall k. k -> k’
    • In the class declaration for ‘C’
